# SIMD_Demo

./: CMakeLists.txt  ccpuid.h  simdsumint.c  stdint.h  sumdouble.c  sumfloat.c  sumint.c  zintrin.h
